--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		<description>This is the description of my J2EE component</description>
 		<display-name>This is the display name of my J2EE component</display-name>
 		<servlet-name>getUser</servlet-name>
-		<servlet-class>servlet.userServlet.GetUser</servlet-class>
+		<servlet-class>com.sonymobile.sonysalesservlet.userServlet.GetUser</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>OAuthServlet</servlet-name>
@@ -21,11 +21,11 @@
 
 	<servlet-mapping>
 		<servlet-name>OAuthServlet</servlet-name>
-		<url-pattern>/wechat/authorize</url-pattern>
+		<url-pattern>/wechat_authorize</url-pattern>
 	</servlet-mapping>
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
-		<filter-class>filter.CharacterEncodingFilter</filter-class>
+		<filter-class>com.sonymobile.sonysales.filter.CharacterEncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>UTF-8</param-value>
