update lashou buy

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    id="WebApp_ID" version="2.5">
-    <display-name>sonysales</display-name>
-
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+  <display-name>sonysales</display-name>
   <servlet>
     <servlet-name>getUserInfo</servlet-name>
     <servlet-class>com.sonymobile.sonysales.servlet.MyFIFAServlet.GetUserInfo</servlet-class>
@@ -22,7 +17,6 @@
     <servlet-name>updateUser</servlet-name>
     <servlet-class>com.sonymobile.sonysales.servlet.MyFIFAServlet.UpdateUser</servlet-class>
   </servlet>
-    
   <servlet>
     <servlet-name>getNameListOfHandle</servlet-name>
     <servlet-class>com.sonymobile.sonysales.servlet.NameListServlet.GetNameListOfHandle</servlet-class>
@@ -31,13 +25,10 @@
     <servlet-name>getNameListOfPopularity</servlet-name>
     <servlet-class>com.sonymobile.sonysales.servlet.NameListServlet.GetNameListOfPopularity</servlet-class>
   </servlet>
-  
-    <servlet>
-        <servlet-name>OAuthServlet</servlet-name>
-        <servlet-class>com.sonymobile.sonysales.servlet.userServlet.OAuthServlet</servlet-class>
-    </servlet>
-    
-
+  <servlet>
+    <servlet-name>OAuthServlet</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.userServlet.OAuthServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>getUserInfo</servlet-name>
     <url-pattern>/getUserInfo</url-pattern>
@@ -54,7 +45,6 @@
     <servlet-name>updateUser</servlet-name>
     <url-pattern>/updateUser</url-pattern>
   </servlet-mapping>
-  
   <servlet-mapping>
     <servlet-name>getNameListOfHandle</servlet-name>
     <url-pattern>/getNameListOfHandle</url-pattern>
@@ -63,86 +53,115 @@
     <servlet-name>getNameListOfPopularity</servlet-name>
     <url-pattern>/getNameListOfPopularity</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>Activity</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Activity</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>Relation</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Relation</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>Share</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Share</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>LashouActivity</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LashouBuy.LashouActivity</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>LashouRelation</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LashouBuy.LashouRelation</servlet-class>
+  </servlet>
+  <servlet>
+    <description></description>
+    <display-name></display-name>
+    <servlet-name>LashouFollow</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.LashouBuy.LashouFollow</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>LashouActivity</servlet-name>
+    <url-pattern>/LashouActivity</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LashouRelation</servlet-name>
+    <url-pattern>/LashouRelation</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LashouFollow</servlet-name>
+    <url-pattern>/LashouFollow</url-pattern>
+  </servlet-mapping>
+  
+  
+  <servlet-mapping>
+    <servlet-name>OAuthServlet</servlet-name>
+    <url-pattern>/wechat_authorize</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Activity</servlet-name>
+    <url-pattern>/activitypage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Relation</servlet-name>
+    <url-pattern>/relationpage</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Share</servlet-name>
+    <url-pattern>/sharepage</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>add a user</description>
+    <display-name>add a user</display-name>
+    <servlet-name>addUser</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.userServlet.AddUser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addUser</servlet-name>
+    <url-pattern>/addUser</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddPopularity</display-name>
+    <servlet-name>AddPopularity</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.popularityServlet.AddPopularity</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddPopularity</servlet-name>
+    <url-pattern>/addPopularity</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AddHandle</display-name>
+    <servlet-name>AddHandle</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.handleServlet.AddHandle</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddHandle</servlet-name>
+    <url-pattern>/addHandle</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <filter-name>characterEncodingFilter</filter-name>
+    <filter-class>com.sonymobile.sonysales.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>characterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
-    <servlet>
-      <description></description>
-      <display-name></display-name>
-      <servlet-name>Activity</servlet-name>
-      <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Activity</servlet-class>
-    </servlet>
-    <servlet>
-      <description></description>
-      <display-name></display-name>
-      <servlet-name>Relation</servlet-name>
-      <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Relation</servlet-class>
-    </servlet>
-    <servlet>
-      <description></description>
-      <display-name></display-name>
-      <servlet-name>Share</servlet-name>
-      <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Share</servlet-class>
-    </servlet>
-    
-
-    <servlet-mapping>
-        <servlet-name>OAuthServlet</servlet-name>
-        <url-pattern>/wechat_authorize</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-      <servlet-name>Activity</servlet-name>
-      <url-pattern>/activitypage</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-      <servlet-name>Relation</servlet-name>
-      <url-pattern>/relationpage</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-      <servlet-name>Share</servlet-name>
-      <url-pattern>/sharepage</url-pattern>
-    </servlet-mapping>
-    
-	<servlet>
-		<description>add a user</description>
-		<display-name>add a user</display-name>
-		<servlet-name>addUser</servlet-name>
-		<servlet-class>com.sonymobile.sonysales.servlet.userServlet.AddUser</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>addUser</servlet-name>
-		<url-pattern>/addUser</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>AddPopularity</display-name>
-		<servlet-name>AddPopularity</servlet-name>
-		<servlet-class>com.sonymobile.sonysales.servlet.popularityServlet.AddPopularity</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AddPopularity</servlet-name>
-		<url-pattern>/addPopularity</url-pattern>
-	</servlet-mapping>
-    
-    
-	<servlet>
-		<description></description>
-		<display-name>AddHandle</display-name>
-		<servlet-name>AddHandle</servlet-name>
-		<servlet-class>com.sonymobile.sonysales.servlet.handleServlet.AddHandle</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AddHandle</servlet-name>
-		<url-pattern>/addHandle</url-pattern>
-	</servlet-mapping>
-    <filter>
-        <filter-name>characterEncodingFilter</filter-name>
-        <filter-class>com.sonymobile.sonysales.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>characterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 </web-app>
