Add myinfo detail
Change-Id: Iefd141a89f3ce79408242584384899453bd18260

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -169,6 +169,16 @@
               <url-pattern>/getUser</url-pattern>
        </servlet-mapping>
        <servlet>
+              <description>Update a user</description>
+              <display-name>Update a user</display-name>
+              <servlet-name>updateUserInfo</servlet-name>
+              <servlet-class>com.sonymobile.sonysales.servlet.userServlet.UpdateUserInfo</servlet-class>
+       </servlet>
+       <servlet-mapping>
+              <servlet-name>updateUserInfo</servlet-name>
+              <url-pattern>/updateUserInfo</url-pattern>
+       </servlet-mapping>
+       <servlet>
               <description>Get my user Info</description>
               <display-name>Get my user Info</display-name>
               <servlet-name>ShowUserInfoServlet</servlet-name>
