--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -1,1 +1,18 @@
-host=http://sonyfifa.sinaapp.com
+#Debug with Bo's account
+HOST=http://sonyfifa.sinaapp.com
+APP_ID=xe2fed806213159c7
+APP_SECRET=24151f5740661c0afafd8f8145ce2061
+
+#Test with Pingfanghe's account 
+#APP_ID=wxd6c996ffd460c4b7
+#APP_SECRET=a57f48290475ab4efd80bcfedee277c5
+#HOST=http://sonysales.sinaapp.com
+
+
+MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
+#Test Server to get UserInfo
+#MASTER_ACCOUNT_GETUSERINFO_PATH=getuserinfo.php
+#Development server to get UserInfo
+MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
+#LAYOU Group feedback money
+FEEDBACK_SINGLE_MONEY=50
