Add the http api to get the sony fifa news
Add the http api to get the sony fifa news

Change-Id: I9ba0720dbd9aa4d9a74b3a04a929f3ed5dafd16d

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -210,6 +210,27 @@
               <servlet-name>AddHandle</servlet-name>
               <url-pattern>/addHandle</url-pattern>
        </servlet-mapping>
+    
+       <servlet>
+              <description></description>
+              <display-name>GetPictextListServlet</display-name>
+              <servlet-name>GetPictextListServlet</servlet-name>
+              <servlet-class>com.sonymobile.sonysales.servlet.api.GetPictextListServlet</servlet-class>
+       </servlet>
+       <servlet-mapping>
+              <servlet-name>GetPictextListServlet</servlet-name>
+              <url-pattern>/getSonySalesNews</url-pattern>
+       </servlet-mapping>
+       <servlet>
+              <description></description>
+              <display-name>HeaderServlet</display-name>
+              <servlet-name>HeaderServlet</servlet-name>
+              <servlet-class>com.sonymobile.sonysales.servlet.api.HeaderServlet</servlet-class>
+       </servlet>
+       <servlet-mapping>
+              <servlet-name>HeaderServlet</servlet-name>
+              <url-pattern>/head</url-pattern>
+       </servlet-mapping>
     <filter>
         <filter-name>characterEncodingFilter</filter-name>
         <filter-class>com.sonymobile.sonysales.filter.CharacterEncodingFilter</filter-class>
