--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -16,3 +16,51 @@ MASTER_ACCOUNT_HOST=http://1.sonyfifadev.sinaapp.com/WeChat/
 MASTER_ACCOUNT_GETUSERINFO_PATH=devUserInfo.php
 #LAYOU Group feedback money
 FEEDBACK_SINGLE_MONEY=50
+
+SONY_FIFA_IMAGES_HOST=http://sonyfifa-sonyfifa.stor.sinaapp.com/
+
+SONY_FIFA_INDEX_NEWS=<xml>\
+<ToUserName><![CDATA[_toUser_]]></ToUserName>\
+<FromUserName><![CDATA[_fromUser_]]></FromUserName>\
+<CreateTime>_createTime_</CreateTime>\
+<MsgType><![CDATA[news]]></MsgType>\
+<ArticleCount>6</ArticleCount>\
+<Articles>\
+<item>\
+<Title><![CDATA[\u7D22\u5C3CFIFA2014\u4E16\u754C\u676F\u72C2\u70ED\u5B63]]></Title> \
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[_PICS_HOST_/banner.jpg]]></PicUrl>\
+<Url><![CDATA[_HOST_/jsp/Description.jsp?id=_fromUser_]]></Url>\
+</item>\
+<item>\
+<Title><![CDATA[\u6FC0\u60C5\u65E0\u654C\uFF01\u4EBA\u6C14\u5927\u5956\u699C]]></Title>\
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[_PICS_HOST_/1.png]]></PicUrl>\
+<Url><![CDATA[_HOST_/getNameList?id=_fromUser_]]></Url>\
+</item>\
+</Articles>\
+<item>\
+<Title><![CDATA[\u62C9\u4EBA\u6C14\uFF0C\u5F97\u5927\u5956\uFF01]]></Title>\
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[_PICS_HOST_/2.png]]></PicUrl>\
+<Url><![CDATA[_HOST_/activitypage?id=_fromUser_]]></Url>\
+</item>\
+<item>\
+<Title><![CDATA[\u62C9\u53CB\u4E70\uFF01\u4ED6\u5B9E\u60E0\uFF0C\u6211\u6536\u76CA\uFF01]]></Title>\
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[_PICS_HOST_/3.png]]></PicUrl>\
+<Url><![CDATA[_HOST_/lashouactivity?id=_fromUser_]]></Url>\
+</item>\
+<item>\
+<Title><![CDATA[\u6BCF\u65E5FIFA\u7ADE\u731C]]></Title>\
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTNuTqtrKCZZ5yjl2MRZhO_WBPHQlz2sFBetgqhTIZtFieMgnRg]]></PicUrl>\
+<Url><![CDATA[]]></Url>\
+</item>\
+<item>\
+<Title><![CDATA[\u6211\u7684\u6218\u51B5]]></Title>\
+<Description><![CDATA[]]></Description>\
+<PicUrl><![CDATA[_PICS_HOST_/4.png]]></PicUrl>\
+<Url><![CDATA[_HOST_/myInfo?id=_fromUser_]]></Url>\
+</item>\
+</xml> 
