Write wrong development wechat acount appid
Write wrong development wechat acount appid

Change-Id: I70d6e31f7a908d26a89d24c751428322aab5d307

--- a/05_cloud/01_SonySales/Code/sonysales/src/config.properties
+++ b/05_cloud/01_SonySales/Code/sonysales/src/config.properties
@@ -1,6 +1,6 @@
 #Debug with Bo's account
 HOST=http://sonyfifa.sinaapp.com
-APP_ID=xe2fed806213159c7
+APP_ID= wxe2fed806213159c7
 APP_SECRET=24151f5740661c0afafd8f8145ce2061
 
 #Test with Pingfanghe's account 
