update upload file function together with bo

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -89,6 +89,13 @@
       <servlet-name>Share</servlet-name>
       <servlet-class>com.sonymobile.sonysales.servlet.LaPopularityServlet.Share</servlet-class>
     </servlet>
+    <servlet>
+      <description></description>
+      <display-name></display-name>
+      <servlet-name>FileUpLoad</servlet-name>
+      <servlet-class>com.sonymobile.sonysales.servlet.Management.FileUpLoad</servlet-class>
+    </servlet>
+    
     
     <servlet-mapping>
         <servlet-name>OAuthServlet</servlet-name>
@@ -106,6 +113,12 @@
       <servlet-name>Share</servlet-name>
       <url-pattern>/sharepage</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+      <servlet-name>FileUpLoad</servlet-name>
+      <url-pattern>/fileupload</url-pattern>
+    </servlet-mapping>
+    
+    
     
     
     
