--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/WEB-INF/web.xml
@@ -35,6 +35,15 @@
     <servlet-class>com.sonymobile.sonysales.servlet.NameListServlet.GetNameListOfPopularity</servlet-class>
   </servlet>
   
+  <servlet>
+    <servlet-name>addAdministrator</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.UserAdminServlet.AddAdministrator</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <servlet-class>com.sonymobile.sonysales.servlet.UserAdminServlet.Login</servlet-class>
+  </servlet>
+  
     <servlet>
         <servlet-name>OAuthServlet</servlet-name>
         <servlet-class>com.sonymobile.sonysales.servlet.userServlet.OAuthServlet</servlet-class>
@@ -69,6 +78,14 @@
   <servlet-mapping>
     <servlet-name>getNameListOfPopularity</servlet-name>
     <url-pattern>/getNameListOfPopularity</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>addAdministrator</servlet-name>
+    <url-pattern>/addAdministrator</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/Management/login</url-pattern>
   </servlet-mapping>
 
     <servlet>
@@ -283,5 +300,22 @@
     <filter-mapping>
         <filter-name>characterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <filter>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>com.sonymobile.sonysales.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>loginFilter</filter-name>
+        <url-pattern>/Management/*</url-pattern>
+    </filter-mapping>
+        <filter>
+        <filter-name>jspFilter</filter-name>
+        <filter-class>com.sonymobile.sonysales.filter.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>jspFilter</filter-name>
+        <url-pattern>/jsp/Management/*</url-pattern>
     </filter-mapping>
 </web-app>
