--- a/05_cloud/01_SonySales/Code/sonysales/.settings/org.eclipse.core.resources.prefs
+++ b/05_cloud/01_SonySales/Code/sonysales/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/jsp/Management/Layout/Footer.jsp=UTF-8
 encoding//WebContent/jsp/ShowUserInfoPage.jsp=UTF-8
 encoding/<project>=UTF-8
